--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-driver=com.mysql.cj.jdbc.Driver
+driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/hunnu_judge?useUnicode=true&characterEncoding=utf-8&useSSL=false
 username=
 password=
